fix wrong words

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -51,7 +51,7 @@
       },
       "kevin": {
         "position": "Co-Founder & Product Lead",
-        "intro": "Former global business leader of a tier-1 public blockchain. Researcher and practitioner of the Token Economy, DAO and the governance protocols. A serail startup entrepreneur. "
+        "intro": "Former global business leader of a tier-1 public blockchain. Researcher and practitioner of the Token Economy, DAO and the governance protocols. A serial startup entrepreneur. "
       }
     },
     "roadmap": {
@@ -67,7 +67,7 @@
         },
         "Iron_age": {
           "title": "Iron Age",
-          "description": "Main net launch with Layer 2 solution<br/>Support DACs to issue their own tokens <br/>DApps/Community onboard program<br/>Microservice tools community development program<br/>"
+          "description": "Main net launch with Layer 2 solution<br/><br/>Support DACs to issue their own tokens <br/><br/>DApps/Community onboard program<br/><br/>Microservice tools community development program"
         },
         "Discovery_age": {
           "title": "Discovery Age",
