fix wrong words

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -46,7 +46,7 @@
         "intro": "Blockchain educator, Co-Founder of CryptoChicks, the world largest female blockchain community with members spanning over 56 countries."
       },
       "yuan": {
-        "position": "Co-Founder & CEO",
+        "position": "Co-Founder & Tech Lead",
         "intro": "Veteran Ethereum developer. Involved in the framework design of the IBM Hyperledger project. OR expert."
       },
       "kevin": {
