--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -56,7 +56,7 @@
       },
       "kevin": {
         "position": "Co-Founder & Product Lead",
-        "intro": "Former global business leader of a tier-1 public blockchain. Researcher and practitioner of the Token Economy, DAO and the governance protocols. A serial startup entrepreneur. "
+        "intro": "Founder of Token Economy Institution. Researcher and practitioner of the Token Economy, DAO and the governance protocols. A serial startup entrepreneur. "
       }
     },
     "roadmap": {
