update page content

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -79,6 +79,9 @@
           "description": "Enroll more Projects/Communities onboard<br/><br/>Launch Microservice Tools Developer Community and Data Assets Market"
         }
       }
+    },
+    "partner": {
+      "title": "Partners & Investors"
     }
   },
   "protocol_page": {
